# hw_generator

./: .gitignore  README.md  pyproject.toml
hw_generator/: __init__.py  hw.py
